maj notebook de presentation kibini tableaux de bords

--- a/kibini/notebook_kibini2_0_presentation.ipynb
+++ b/kibini/notebook_kibini2_0_presentation.ipynb
@@ -1,9 +1,8 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "2cce8b7f",
+   "id": "e4f650df",
    "metadata": {},
    "source": [
     "#  LES TABLEAUX DE BORDS DE LA GRAND PLAGE\n",
@@ -16,7 +15,7 @@
     "\n",
     "## Ca sert à quoi ? 🧭\n",
     "\n",
-    "Comme son nom l'indique, <span style=\"color:blue\">***les tableaux de bords La Grand-Plage***</span> **permet aux instances de décisions** (mais aussi les collègues intéressés !!!) **de mieux comprendre l'activité de la médiathèque dans les grandes lignes**. Elle a été pensé comme un outil qui permet de répondre à des questions simples en se basant sur une arborescence qui reprend les grands indicateurs statistiques de la Médiathèque de Roubaix.\n",
+    "Comme son nom l'indique, <span style=\"color:blue\">***les tableaux de bords La Grand-Plage***</span> **permet à la Direction de la Médiathèque** (mais aussi les collègues intéressés !!!) **de mieux comprendre l'activité de la médiathèque dans les grandes lignes**. Elle a été pensé comme un outil qui permet de répondre à des questions simples en se basant sur une arborescence qui reprend les grands indicateurs statistiques de la Médiathèque de Roubaix.\n",
     "\n",
     "Le site se compose d'un menu (situé à gauche) composé de questions auxquels les graphiques présents dans chaque page doivent apporter des éléments de réponses.\n",
     "\n",
@@ -49,30 +48,7 @@
     "\n",
     "Les données propres ça n'existe pas ! Mais vous pouvez quand même aider à améliorer notre outil en :\n",
     "* **Remontant les erreurs ou données** \"anormales\" ; ça nous permet de corriger/améliorer les scripts\n",
-    "* **Proposant des idées** qui répondent à vos besoin d'informations (contacer Lucas & François☺)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e4f650df",
-   "metadata": {},
-   "source": [
-    "***\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "***\n",
-    "\n",
-    "# ANCIENNE VERSION\n",
-    "## L'outil Kibini, qu'est-ce que c'est ?\n",
-    "\n",
-    "Kibini, le présent outil propose une répartition de l'activité de la Grand-Plage en 3 pôles distincts (cf sur le menu de gauche) :\n",
-    "* L'activité de la Médiathèque, située rue Pierre Motte,\n",
-    "* L'activité du Zèbre,\n",
-    "* L'activité du service Collectivités (activité spécifique, en lien étroit avec le rythme scolaire, donc à distinguer de l'activité régulière de la Médiathèque).\n",
-    "\n",
-    "\n",
+    "* **Proposant des idées** qui répondent à vos besoin d'informations (contacer Lucas & François☺)\n",
     "\n",
     "## Comment améliorer Kibini 2 ?\n",
     "Si vous souhaitez faire remonter un problème, une erreur au niveau des statistiques, ou que vous avez une idée pour améliorer *Kibini - les tableaux de bords La Grand-Plage*, **merci de contacter Lucas Chirlias** !\n",
@@ -80,31 +56,23 @@
     "\n",
     "\n",
     "\n",
-    "## Les services de la Médiathèque \n",
+    "## Récap des services de la Médiathèque\n",
     "\n",
-    "La Médiathèque est ouverte 50h par semaine en période scolaire, de 9h à 19h du mardi au samedi, et le dimanche de 14h à 18h hors période de vacances scolaires. Elle donne accès à :\n",
+    "La Médiathèque est ouverte 54h par semaine en période scolaire, de 9h à 19h du mardi au samedi, et le dimanche de 14h à 18h hors période de vacances scolaires. Elle donne accès à :\n",
     "* un espace de 3350 m²\n",
     "* 275 places assises (+ 50 places avec ordinateurs),\n",
-    "* Une salle d'étude, pour travailler au calme,\n",
-    "* Une salle multimédia,\n",
+    "* Une salle d'étude silencieuse,\n",
+    "* Une salle informatique (Salle Multimédia),\n",
     "* 8 imprimantes noir et blanc et couleur, 2 scanners et 1 photocopieuse,\n",
     "* Au total, 50 postes informatiques accessibles au public,\n",
-    "* 40 prises pour connecter son propre ordinateur,\n",
+    "* 40 prises pour connecter son ordinateur personnel,\n",
     "* 185 000 documents empruntables et près de 60 000 en consultation sur place,\n",
-    "* Livres, revues et journaux, bandes dessinées, livres sonores, livres en gros caractères, CD, DVD, méthodes de langue, partitions,\n",
+    "* Livres, revues et journaux, bandes dessinées, livres sonores, livres en gros caractères, CD, DVD, méthodes de langue, partitions\n",
     "* Chaque semaine, des ateliers CV, des permanences d'écrivain public, de l'aide aux devoirs,\n",
     "* Une salle équipée et modulable, La Criée, pour accueillir lectures, expositions, concerts, projections, ...\n",
     "* Des rendez-vous réguliers pour des publics variés (Les Racontées, Les ateliers Clics et Déclics, le Club de lecture Tulalus, les 15h tympantes, les Ateliers du Patrimoine, les Questions de Parents, ...)\n",
     "* Et une large programmation culturelle pour petits et grands, toujours renouvelée"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "096d1d7e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
