maj modifs notebooks_sll section A C et D

--- a/kibini/notebook_sll.ipynb
+++ b/kibini/notebook_sll.ipynb
@@ -1,6 +1,37 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f34c79ad",
+   "metadata": {},
+   "source": [
+    "# NOTEBOOK RAPPORT SLL\n",
+    "\n",
+    "L'objectif de ce notebook est de remplir le rapport du Service du Livre et de la Lecture (SLL)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62b9cb84",
+   "metadata": {},
+   "source": [
+    "# A - Site internet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "814855ec",
+   "metadata": {},
+   "source": [
+    "## A1 - Site internet\n",
+    "\n",
+    "* Site internet \n",
+    "* Statut site : Site internet propre\n",
+    "\n",
+    "La bibliothèque a-t-elle déposé une attestation de conformité de son site web aux exigences du Référentiel général d'accessibilité pour les administrations RGAA) ? **Non**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "b70cee9c",
@@ -33,6 +64,33 @@
     "year = 2024\n",
     "#date_extraction_usagers = '2023-12-27'\n",
     "date_extraction_usagers = '2024-12-25'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "767f6a82",
+   "metadata": {},
+   "source": [
+    "# C - Accès et installations\n",
+    "## C1 - Accès et installations\n",
+    "\n",
+    "|Nombre d'heures d'ouverture hebdomadaires tous publics|54|C101|\n",
+    "|:-----------------------------------------------------|---|----|\n",
+    "|Nombre de jours d'ouverture hebdomadaires|6|C115|\n",
+    "|Nombre de jours d'ouverture annuels|???|C102|\n",
+    "|La bibliothèque est-elle ouverte dimanche ?|Oui|C116|\n",
+    "|Nombre de places assises disponibles |???|C103 | \n",
+    "| - Avec possibilité de connexions aux ordinateurs |47|C104|\n",
+    "|Nombre de postes informatiques publics avec accès internet|???|C106|\n",
+    "|La bibliothèque met-elle à disposition des usagers empêchés de lire du fait d’un handicap, des postes informatiques équipés d’aides matérielles et logicielles pour accéder aux collections ?|Non|C114|\n",
+    "|Nombre de photocopieurs en accès public| 1|C109|\n",
+    "|Nombre d'imprimantes en accès public|???|C110\n",
+    "|Nombre de tablettes mises à disposition du public|0|C118|\n",
+    "|Nombre de bibliobus|1|C112\n",
+    "|Liseuses mises à la dispsition du public|0|C118|\n",
+    "|Bornes d'écoute|1|C119|\n",
+    "|Nombre de consoles de jeux-vidéos|6|C121|\n",
+    "|Connexion wifi publique|oui|C120|"
    ]
   },
   {
@@ -252,7 +310,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "16946ca6",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -306,6 +366,24 @@
     "    AND ExtractValue( bm.metadata, '//datafield[@tag=\"801\"]/subfield[@code=\"b\"]' ) != '595126101'\"\"\"\n",
     "r = pd.read_sql(query, db_conn)\n",
     "r"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa55a619",
+   "metadata": {},
+   "source": [
+    "## C3 - Locaux\n",
+    "|Intitulé|valeur|code SLL|\n",
+    "|:--|---|---|\n",
+    "|Surface utile nette totale (en m²)|5300|C301|\n",
+    "|Espaces de services Interns ( en m²)|590|C302|\n",
+    "|Espace de service public (en m²)|3350|C303|\n",
+    "|Espace manifestations et animations (en m²)|250|C304|\n",
+    "|Espace de magains|550|C305|\n",
+    "|Caféterias et surfaces détente|140|C306|\n",
+    "|Votre bâtiment est-il accessible au sens de la loi du 11 février 2005 ?|oui|C309|\n",
+    "|Précisez|Monte-personnes et ascenseurs qui permettent à chacun d'accéder à l'ensemble du bâtiment|C310|\n"
    ]
   },
   {
@@ -915,6 +993,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "19672076",
+   "metadata": {},
+   "source": [
+    "## D2 - Publications en séries en cours imprmimées\n",
+    "> Demander à Stéphanie"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5d22b459",
    "metadata": {},
    "source": [
@@ -1383,6 +1470,66 @@
    "source": [
     "data = exemplaires_sll[exemplaires_sll['sll_collection'] == 'D1 - Livres imprimés']\n",
     "data_el = eliminations_sll[eliminations_sll['sll_collection'] == 'D1 - Livres imprimés']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0441e554",
+   "metadata": {},
+   "source": [
+    "## D6 - Ressources numériques acquises\n",
+    "> Depuis juin 2023 les ressources ne sont plus acquises directement par la médiathèque de Roubaix, mais par la MEL.\n",
+    "\n",
+    "### Bouquets de contenus\n",
+    "Pour chaque item, merci de sélectionner le bouquet principal si vous en avez plusieurs\n",
+    " \n",
+    "|Intitulé|oui/non|Nom de l'offre|Code SLL\n",
+    "|:---|:---:|---|---|\n",
+    "    |Livre|non|   |D522\n",
+    "|Livres enregistrés|non|   |D524\n",
+    "|Dictionnaires, encyclopédies|non|   |D526|\n",
+    "|Musique|non|   |D528\n",
+    "|Vidéo|non|   |D530|\n",
+    "|Presse|non|   |D532|\n",
+    "|Apprentissage en ligne (adultes)|non|   |D534|\n",
+    "|Ludo-éducatif (jeunesse)|non|   |D536|\n",
+    "|Autres bouquets acquis|non|   |D538"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72eec01d",
+   "metadata": {},
+   "source": [
+    "### Ressources à l'unité\n",
+    "\n",
+    "|Intitulé|oui/non|Nombre d'acquisitions|Nom du fournisseur|Code SLL|\n",
+    "|:---|---|---|---|---|\n",
+    "|Livres|oui|45|Autre|D539-540-541|\n",
+    "|Presse|non|   |   |   |\n",
+    "Applications|non|   |   |   |\n",
+    "Autres ressources|non|   |   |    |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4338b530",
+   "metadata": {},
+   "source": [
+    "## D7 - Collections adaptées\n",
+    "\n",
+    "|intitulé|oui/non|Code SLL|\n",
+    "|:---|---|---|\n",
+    "|La bibliothèque propose-t-elle des collections adaptées ?|oui|D701\n",
+    "|Livres en gros caractères|oui|D708\n",
+    "|Livres lus du commerce|oui|D709\n",
+    "|Braille|non|D702\n",
+    "|Ouvrages en Daisy|non|\n",
+    "|Revues en synthèse vocale|non|D703\n",
+    "|Revues en synthèse vocale|non|D704\n",
+    "|Livres-DVD en langue des signes française (LSF)|non|D705\n",
+    "|Livres tactiles ou en relief|non|D706\n",
+    "|Autres collections adaptées|oui|D707"
    ]
   },
   {
