Maj notebook mouette, rectification variable nb de visiteurs du sit web

--- a/kibini/notebook_synthese_mouette.ipynb
+++ b/kibini/notebook_synthese_mouette.ipynb
@@ -36,7 +36,7 @@
    "outputs": [],
    "source": [
     "year = 2025 #année pour les stats\n",
-    "month = 1 # Numéro du mois pour les stats"
+    "month = 2 # Numéro du mois pour les stats"
    ]
   },
   {
@@ -70,7 +70,7 @@
     {
      "data": {
       "text/plain": [
-       "'janvier'"
+       "'février'"
       ]
      },
      "execution_count": 5,
@@ -135,28 +135,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2025-01-02 09:00:00</td>\n",
-       "      <td>58</td>\n",
+       "      <td>2025-02-01 09:00:00</td>\n",
+       "      <td>37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2025-01-02 10:00:00</td>\n",
-       "      <td>108</td>\n",
+       "      <td>2025-02-01 10:00:00</td>\n",
+       "      <td>105</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2025-01-02 11:00:00</td>\n",
-       "      <td>139</td>\n",
+       "      <td>2025-02-01 11:00:00</td>\n",
+       "      <td>88</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2025-01-02 12:00:00</td>\n",
-       "      <td>111</td>\n",
+       "      <td>2025-02-01 12:00:00</td>\n",
+       "      <td>85</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2025-01-02 13:00:00</td>\n",
-       "      <td>136</td>\n",
+       "      <td>2025-02-01 13:00:00</td>\n",
+       "      <td>132</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -164,50 +164,50 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>242</th>\n",
-       "      <td>2025-01-31 15:00:00</td>\n",
-       "      <td>117</td>\n",
+       "      <th>188</th>\n",
+       "      <td>2025-02-28 15:00:00</td>\n",
+       "      <td>119</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>243</th>\n",
-       "      <td>2025-01-31 16:00:00</td>\n",
-       "      <td>118</td>\n",
+       "      <th>189</th>\n",
+       "      <td>2025-02-28 16:00:00</td>\n",
+       "      <td>132</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>244</th>\n",
-       "      <td>2025-01-31 17:00:00</td>\n",
-       "      <td>52</td>\n",
+       "      <th>190</th>\n",
+       "      <td>2025-02-28 17:00:00</td>\n",
+       "      <td>89</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>245</th>\n",
-       "      <td>2025-01-31 18:00:00</td>\n",
-       "      <td>50</td>\n",
+       "      <th>191</th>\n",
+       "      <td>2025-02-28 18:00:00</td>\n",
+       "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>246</th>\n",
-       "      <td>2025-01-31 19:00:00</td>\n",
-       "      <td>2</td>\n",
+       "      <th>192</th>\n",
+       "      <td>2025-02-28 19:00:00</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>247 rows × 2 columns</p>\n",
+       "<p>193 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "               datetime  entrees\n",
-       "0   2025-01-02 09:00:00       58\n",
-       "1   2025-01-02 10:00:00      108\n",
-       "2   2025-01-02 11:00:00      139\n",
-       "3   2025-01-02 12:00:00      111\n",
-       "4   2025-01-02 13:00:00      136\n",
+       "0   2025-02-01 09:00:00       37\n",
+       "1   2025-02-01 10:00:00      105\n",
+       "2   2025-02-01 11:00:00       88\n",
+       "3   2025-02-01 12:00:00       85\n",
+       "4   2025-02-01 13:00:00      132\n",
        "..                  ...      ...\n",
-       "242 2025-01-31 15:00:00      117\n",
-       "243 2025-01-31 16:00:00      118\n",
-       "244 2025-01-31 17:00:00       52\n",
-       "245 2025-01-31 18:00:00       50\n",
-       "246 2025-01-31 19:00:00        2\n",
+       "188 2025-02-28 15:00:00      119\n",
+       "189 2025-02-28 16:00:00      132\n",
+       "190 2025-02-28 17:00:00       89\n",
+       "191 2025-02-28 18:00:00       30\n",
+       "192 2025-02-28 19:00:00        1\n",
        "\n",
-       "[247 rows x 2 columns]"
+       "[193 rows x 2 columns]"
       ]
      },
      "execution_count": 7,
@@ -242,7 +242,7 @@
     {
      "data": {
       "text/plain": [
-       "25"
+       "20"
       ]
      },
      "execution_count": 9,
@@ -290,128 +290,103 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2025-01-02</td>\n",
-       "      <td>1385</td>\n",
+       "      <td>2025-02-01</td>\n",
+       "      <td>1230</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2025-01-03</td>\n",
-       "      <td>1244</td>\n",
+       "      <td>2025-02-02</td>\n",
+       "      <td>532</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2025-01-04</td>\n",
-       "      <td>1152</td>\n",
+       "      <td>2025-02-04</td>\n",
+       "      <td>956</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2025-01-07</td>\n",
-       "      <td>882</td>\n",
+       "      <td>2025-02-05</td>\n",
+       "      <td>1280</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2025-01-08</td>\n",
-       "      <td>1183</td>\n",
+       "      <td>2025-02-06</td>\n",
+       "      <td>894</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>2025-01-09</td>\n",
-       "      <td>651</td>\n",
+       "      <td>2025-02-07</td>\n",
+       "      <td>934</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>2025-01-10</td>\n",
-       "      <td>846</td>\n",
+       "      <td>2025-02-08</td>\n",
+       "      <td>1190</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>2025-01-11</td>\n",
-       "      <td>1311</td>\n",
+       "      <td>2025-02-11</td>\n",
+       "      <td>1172</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>2025-01-12</td>\n",
-       "      <td>633</td>\n",
+       "      <td>2025-02-12</td>\n",
+       "      <td>1206</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>2025-01-14</td>\n",
-       "      <td>1068</td>\n",
+       "      <td>2025-02-13</td>\n",
+       "      <td>984</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>2025-01-15</td>\n",
-       "      <td>1287</td>\n",
+       "      <td>2025-02-14</td>\n",
+       "      <td>859</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>2025-01-16</td>\n",
-       "      <td>903</td>\n",
+       "      <td>2025-02-15</td>\n",
+       "      <td>927</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>2025-01-17</td>\n",
-       "      <td>920</td>\n",
+       "      <td>2025-02-18</td>\n",
+       "      <td>1338</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>2025-01-18</td>\n",
-       "      <td>1218</td>\n",
+       "      <td>2025-02-19</td>\n",
+       "      <td>1109</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>2025-01-19</td>\n",
-       "      <td>576</td>\n",
+       "      <td>2025-02-20</td>\n",
+       "      <td>1117</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>2025-01-21</td>\n",
-       "      <td>959</td>\n",
+       "      <td>2025-02-21</td>\n",
+       "      <td>1059</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>2025-01-22</td>\n",
-       "      <td>1340</td>\n",
+       "      <td>2025-02-22</td>\n",
+       "      <td>946</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>2025-01-23</td>\n",
-       "      <td>1003</td>\n",
+       "      <td>2025-02-25</td>\n",
+       "      <td>1038</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>2025-01-24</td>\n",
-       "      <td>755</td>\n",
+       "      <td>2025-02-26</td>\n",
+       "      <td>1499</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>2025-01-25</td>\n",
-       "      <td>1343</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>2025-01-26</td>\n",
-       "      <td>597</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>2025-01-28</td>\n",
-       "      <td>1053</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>2025-01-29</td>\n",
-       "      <td>1372</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>2025-01-30</td>\n",
-       "      <td>884</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>2025-01-31</td>\n",
-       "      <td>893</td>\n",
+       "      <td>2025-02-28</td>\n",
+       "      <td>953</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -419,31 +394,26 @@
       ],
       "text/plain": [
        "      datetime  entrees\n",
-       "0   2025-01-02     1385\n",
-       "1   2025-01-03     1244\n",
-       "2   2025-01-04     1152\n",
-       "3   2025-01-07      882\n",
-       "4   2025-01-08     1183\n",
-       "5   2025-01-09      651\n",
-       "6   2025-01-10      846\n",
-       "7   2025-01-11     1311\n",
-       "8   2025-01-12      633\n",
-       "9   2025-01-14     1068\n",
-       "10  2025-01-15     1287\n",
-       "11  2025-01-16      903\n",
-       "12  2025-01-17      920\n",
-       "13  2025-01-18     1218\n",
-       "14  2025-01-19      576\n",
-       "15  2025-01-21      959\n",
-       "16  2025-01-22     1340\n",
-       "17  2025-01-23     1003\n",
-       "18  2025-01-24      755\n",
-       "19  2025-01-25     1343\n",
-       "20  2025-01-26      597\n",
-       "21  2025-01-28     1053\n",
-       "22  2025-01-29     1372\n",
-       "23  2025-01-30      884\n",
-       "24  2025-01-31      893"
+       "0   2025-02-01     1230\n",
+       "1   2025-02-02      532\n",
+       "2   2025-02-04      956\n",
+       "3   2025-02-05     1280\n",
+       "4   2025-02-06      894\n",
+       "5   2025-02-07      934\n",
+       "6   2025-02-08     1190\n",
+       "7   2025-02-11     1172\n",
+       "8   2025-02-12     1206\n",
+       "9   2025-02-13      984\n",
+       "10  2025-02-14      859\n",
+       "11  2025-02-15      927\n",
+       "12  2025-02-18     1338\n",
+       "13  2025-02-19     1109\n",
+       "14  2025-02-20     1117\n",
+       "15  2025-02-21     1059\n",
+       "16  2025-02-22      946\n",
+       "17  2025-02-25     1038\n",
+       "18  2025-02-26     1499\n",
+       "19  2025-02-28      953"
       ]
      },
      "execution_count": 10,
@@ -472,7 +442,7 @@
     {
      "data": {
       "text/plain": [
-       "581"
+       "503"
       ]
      },
      "execution_count": 11,
@@ -498,8 +468,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15359\n",
-      "15108\n",
+      "15377\n",
+      "15114\n",
       "2.0\n"
      ]
     }
@@ -533,11 +503,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25458\n",
-      "1385\n",
-      "2025-01-02\n",
-      "21739\n",
-      "17.0\n"
+      "21223\n",
+      "1499\n",
+      "2025-02-26\n",
+      "22060\n",
+      "-4.0\n"
      ]
     }
    ],
@@ -575,11 +545,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "26926\n",
-      "2250\n",
-      "2025-01-02\n",
-      "29923\n",
-      "-10.0\n"
+      "27961\n",
+      "2446\n",
+      "2025-02-08\n",
+      "30513\n",
+      "-8.0\n"
      ]
     }
    ],
@@ -617,11 +587,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5122\n",
-      "268\n",
-      "2025-01-04\n",
-      "4820\n",
-      "6.0\n"
+      "4818\n",
+      "320\n",
+      "2025-02-26\n",
+      "5173\n",
+      "-7.0\n"
      ]
     }
    ],
@@ -659,9 +629,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1214\n",
-      "934\n",
-      "30.0\n"
+      "1069\n",
+      "1152\n",
+      "-7.0\n"
      ]
     }
    ],
@@ -695,11 +665,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4945\n",
-      "286\n",
-      "2025-01-29\n",
-      "4115\n",
-      "20.0\n"
+      "4833\n",
+      "309\n",
+      "2025-02-01\n",
+      "4221\n",
+      "14.0\n"
      ]
     }
    ],
@@ -737,9 +707,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17417\n",
-      "16101\n",
-      "8.0\n"
+      "15648\n",
+      "15682\n",
+      "-0.0\n"
      ]
     }
    ],
@@ -772,9 +742,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "699\n",
-      "701\n",
-      "-0.0\n"
+      "529\n",
+      "536\n",
+      "-1.0\n"
      ]
     }
    ],
@@ -798,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "534af550",
    "metadata": {},
    "outputs": [
@@ -806,46 +776,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Chiffres de la Mouette pour le mois de janvier 2025\n",
-      "--------------------------------------------------------------------------------\n",
+      "Chiffres de la Mouette pour le mois de février 2025\n",
+      "°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°\n",
       "\n",
-      "En janvier, la médiathèque a été ouverte 25 jours au total.\n",
+      "En février, la médiathèque a été ouverte 20 jours au total.\n",
       "\n",
-      "15359 personnes inscrites (2 %).\n",
+      "15377 personnes inscrites (2 %).\n",
       "\n",
       "En moyenne, chaque jour (par rapport au même mois de l'année précédente) :\n",
       "\n",
-      "1018 entrées (17 %)\n",
+      "1061 entrées (-4 %)\n",
       "\n",
-      "1077 prêts (-10 %)\n",
+      "1398 prêts (-8 %)\n",
       "\n",
-      "205 connexions aux ordinateurs (6 %)\n",
+      "241 connexions aux ordinateurs (-7 %)\n",
       "\n",
-      "49 connexions Wifi (30 %)\n",
+      "53 connexions Wifi (-7 %)\n",
       "\n",
-      "198 réservations (20 %)\n",
+      "242 réservations (14 %)\n",
       "\n",
-      "697 visites du site internet (8 %)\n",
+      "782 visites du site internet (0 %)\n",
       "\n",
-      "28 visites en salle d'études (0 %)\n",
+      "26 visites en salle d'études (-1 %)\n",
       "\n",
-      "17417 visites du site web (8%)\n",
+      "782 visites du site web (0%)\n",
       "\n",
       "\n",
       "Les tops :\n",
-      "--------------------------------------------------------------------------------\n",
+      "°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°\n",
       "\n",
-      "1385 entrées le jeudi 02 janvier 2025\n",
-      "268 connexions aux ordinateurs le samedi 04 janvier 2025\n",
-      "286 réservations le mercredi 29 janvier 2025\n",
-      "2250 prêts le jeudi 02 janvier 2025\n"
+      "1499 entrées le mercredi 26 février 2025\n",
+      "320 connexions aux ordinateurs le mercredi 26 février 2025\n",
+      "309 réservations le samedi 01 février 2025\n",
+      "2446 prêts le samedi 08 février 2025\n"
      ]
     }
    ],
    "source": [
     "print(f\"Chiffres de la Mouette pour le mois de {month_name} {year}\")\n",
     "\n",
-    "print(\"-\"*80 +\"\\n\")\n",
+    "print(\"°\"*65 +\"\\n\")\n",
     "\n",
     "print(f\"En {month_name}, la médiathèque a été ouverte {days} jours au total.\\n\")\n",
     "\n",
@@ -874,17 +844,25 @@
     "print(f\"{int(round(nb_etude / days, 0))} visites en salle d'études ({int(etude_evolution)} %)\\n\")\n",
     "\n",
     "#XX visites du site web\n",
-    "print(f\"{nb_web} visites du site web ({int(web_evolution)}%)\")\n",
+    "print(f\"{int(round(nb_web / days,0))} visites du site web ({int(web_evolution)}%)\")\n",
     "\n",
     "print(\"\\n\")\n",
     "print(\"Les tops :\")\n",
-    "print(\"-\"*80 +\"\\n\")\n",
+    "print(\"°\"*65 +\"\\n\")\n",
     "\n",
     "print(f\"{max_entrees_nb} entrées le {max_entrees_date.strftime('%A %d %B %Y')}\")\n",
     "print(f\"{max_conn_nb} connexions aux ordinateurs le {max_conn_date.strftime('%A %d %B %Y')}\")\n",
     "print (f\"{max_res_nb} réservations le {max_res_date.strftime('%A %d %B %Y')}\")\n",
     "print(f\"{max_prets_nb} prêts le {max_prets_date.strftime('%A %d %B %Y')}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "556c5b38",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
